--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@ Javascript di aprire quella finestra, dai alt alle immagini-->
                     </div>
                 </div>
                 <div class="swiper-container">
-                    <div class="swiper mySwiper">
+                    <div class="swiper mySwiper" id="mySwiper1">
                         <div class="swiper-wrapper">
                             <div class="swiper-slide">
                                 <div class="swiper-image">
@@ -861,6 +861,168 @@ Javascript di aprire quella finestra, dai alt alle immagini-->
         </div>
 
         <!-- Swiper argomenti-->
+
+        <div class="swiper-container2" id="swiper-container2">
+            <header class="swiper_header">
+                <h2 class="swiper_title">
+                    <b>Argomenti </b>
+                </h2>
+                <div class="arrows">
+                    <button class="swiper-btn-prev " >
+                        <i class="fa-solid fa-arrow-left" style=" border: none; background-color: transparent;"></i>
+                    </button>
+                    <button class="swiper-btn-next ">
+                        <i class="fa-solid fa-arrow-right" style=" border: none; background-color: transparent"></i>
+                    </button>
+                </div>
+            </header>
+            <div class="swiper mySwiper" id="mySwiper2">
+                <div class="swiper-wrapper" id="swiper-wrapper2">
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/240/150" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum A</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/240/151" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum B</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/240/149" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum C</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/241/150" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum D</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/241/151" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum E</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/241/152" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum F</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/240/149" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum G</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/239/149" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum H</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                    <div class="swiper-slide">
+                        <article class="swiper_article" style="width: 100%">
+                            <a class="swiper_art_img_link" href="#">
+                                <div class="swiper_art_img_container">
+                                    <img class="swiper_art_img" alt="img" src="https://picsum.photos/239/150" style="width: 100%">
+                                </div>
+                            </a>
+                            <h2 class="swiper_art_title">
+                                <a href="#" class="swiper_art_title">
+                                    <b>Lorem Ipsum I</b>
+                                </a>
+                            </h2>
+
+                        </article>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+        </div>
+
+
+
 
 
     </div>
