change footer, more article

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
 
 
 <body>
+
+<A NAME="top"></A>
     <!-- Search bar-->
 <div id="search-bar" class="flex-container1">
     <div class="search-icon-lg">
@@ -866,7 +868,6 @@
         </div>
 
         <!-- Swiper argomenti-->
-
         <div class="swiper-container2" id="swiper-container2">
             <header class="swiper_header">
                 <h2 class="title">
@@ -1026,9 +1027,164 @@
 
         </div>
 
+        <!--Altri articoli-->
+        <div class="col-12 col-md-6 col-lg-6">
+            <div class="aside-article">
+                    <div class="aside-overtitle">
+                        <a href="#" style="color: #1887E4">
+                            <i class="fa-solid fa-square" style="color: #1887E4"></i>
+                            Et odit ipsum
+                        </a>
+                        <a href="#">
+                            <i class="fa-solid fa-share fa-sm" style="color: #1887E4; "></i>
+                        </a>
+                    </div>
+                    <img src="https://picsum.photos/311/174" alt=img" class="img-fluid" style="width: 100%">
+                    <div class="aside-title">
+                        <a href="#">
+                            Aut nihil dolorem aut quasi alias rem quaerat
+                        </a>
+                    </div>
+                </div>
+        </div>
+        <div class="col-12 col-md-6 col-lg-6">
+            <div class="aside-article">
+                <div class="aside-overtitle">
+                    <a href="#" style="color: #1887E4">
+                        <i class="fa-solid fa-square" style="color: #1887E4"></i>
+                        Eum quidem corrupti
+                    </a>
+                    <a href="#">
+                        <i class="fa-solid fa-share fa-sm" style="color: #1887E4; "></i>
+                    </a>
+                </div>
+
+                <img src="https://picsum.photos/311/178" alt=img" class="img-fluid" style="width: 100%">
+
+                <div class="aside-title">
+                    <a href="#">
+                        Et odit ipsum ut atque deleniti ut harum fuga et molestiae
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="col-12 col-lg-8">  <!-- Main: notizie a sinistra-->
+            <div class="main-article-small">
+                <div class="article-img">
+                    <img src="https://picsum.photos/311/173" alt=img" class="img-fluid" style="width: 100%">
+                </div>
+                <div class="article-information">
+                    <div class="aside-overtitle">
+                        <a href="#" style="color: #1887E4">
+                            <i class="fa-solid fa-square" style="color: #1887E4"></i>
+                            Ut placeat
+                        </a>
+                        <a href="#">
+                            <i class="fa-solid fa-share fa-sm" style="color: #1887E4; "></i>
+                        </a>
+                    </div>
+                    <div class="aside-title">
+                        <a href="#">
+                            Est voluptas ducimus et velit iste quo expedita
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="row" >
+                <div class="col-md-6">
+                    <div class="aside-article" style="border-top-color: black">
+                        <div class="aside-overtitle">
+                            <a href="#" style="color:#1887E4">
+                                <i class="fa-solid fa-square"></i>
+                                Ut saepe
+                            </a>
+                            <a href="#">
+                                <i class="fa-solid fa-share fa-sm" style="color: #1887E4; "></i>
+                            </a>
+                        </div>
+
+                        <div class="aside-title">
+                            <a href="#">
+
+                                <img src="https://picsum.photos/108/60" alt=img" style="float: right;">
+                                <p>Ab dolores exercitationem sit aliquid nostrum</p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="aside-article" style="border-top-color: black">
+                        <div class="aside-overtitle">
+                            <a href="#" style="color:#1887E4">
+                                <i class="fa-solid fa-square"></i>
+                                Sit soluta
+                            </a>
+                            <a href="#">
+                                <i class="fa-solid fa-share fa-sm" style="color: #1887E4; "></i>
+                            </a>
+                        </div>
+
+                        <div class="aside-title">
+                            <a href="#">
+
+                                <img src="https://picsum.photos/108/61" alt=img" style="float: right;">
+                                <p>Aut necessitatibus facilis non magni </p>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row" >
+                <div class="col-md-6">
+                    <div class="aside-article">
+                        <div class="aside-overtitle">
+                            <a href="#" style="color: #1887E4">
+                                <i class="fa-solid fa-square" style="color: #1887E4"></i>
+                                Et odit ipsum
+                            </a>
+                            <a href="#">
+                                <i class="fa-solid fa-share fa-sm" style="color: #1887E4; "></i>
+                            </a>
+                        </div>
+                        <img src="https://picsum.photos/311/174" alt=img" class="img-fluid" style="width: 100%">
+                        <div class="aside-title">
+                            <a href="#">
+                                Aut nihil dolorem aut quasi alias rem quaerat
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="aside-article">
+                        <div class="aside-overtitle">
+                            <a href="#" style="color: #1887E4">
+                                <i class="fa-solid fa-square" style="color: #1887E4"></i>
+                                Eum quidem corrupti
+                            </a>
+                            <a href="#">
+                                <i class="fa-solid fa-share fa-sm" style="color: #1887E4; "></i>
+                            </a>
+                        </div>
+
+                        <img src="https://picsum.photos/311/178" alt=img" class="img-fluid" style="width: 100%">
+
+                        <div class="aside-title">
+                            <a href="#">
+                                Et odit ipsum ut atque deleniti ut harum fuga et molestiae
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
 
 
+        </div>
+        <div class="col-12 col-lg-4">  <!-- Aside: notizie a destra -->
+            <div>
+
+            </div>
+        </div>
 
     </div>
 
@@ -1040,13 +1196,79 @@
     <!--Footer-->
     <div class="container-footer">
         <div class="logo-footer" style="margin-left: 20px;"> <img src="logo.svg" alt="logo di Libero" ></div>
-        <div style="margin-right:20px;">
+        <div class="nav-footer">
+            <div class="nav-footer1">
+                <a href="#"> Cookie Policy</a>
+                <a href="#"> Contatti</a>
+            </div>
+            <div class="nav-footer2">
+                <a href="#"> Privacy Policy</a>
+                <a href="#"> Pubblicità</a>
+            </div>
+            <div class="nav-footer3">
+                <a href="#"> Condizioni Generali</a>
+                <a href="#"> Credits</a>
+            </div>
+        </div>
+        <div class="additional-links">
+            <div class="link-edicola">
+                <a href="#"><i class="fa-regular fa-newspaper" style="color: #ffffff;">  </i></a>
+                <a href="#"> Edicola Digitale </a>
+            </div>
+            <div class="link-shopping">
+                <a href="#"> <i class="fa-solid fa-bag-shopping" style="color: #ffffff;"></i></a>
+                <a href="#"> Libero Shopping </a>
+            </div>
+        </div>
+        <div class="icon-footer-xs" style="margin-right:20px;">
+            <a href="#" style="color:white"> <i class="fa-brands fa-facebook-f fa-xs" style="margin-right: 15px"></i> </a>
+            <a href="#" style="color:white"> <i class="fa-brands fa-twitter fa-xs" style="margin-right: 15px"> </i> </a>
+            <a href="#" style="color:white"> <i class="fa-brands fa-instagram fa-xs" style="margin-right: 15px"></i> </a>
+        </div>
+        <div class="icon-footer-sm" style="margin-right:20px;">
             <a href="#" style="color:white"> <i class="fa-brands fa-facebook-f" style="margin-right: 15px"></i> </a>
             <a href="#" style="color:white"> <i class="fa-brands fa-twitter" style="margin-right: 15px"> </i> </a>
             <a href="#" style="color:white"> <i class="fa-brands fa-instagram" style="margin-right: 15px"></i> </a>
         </div>
     </div>
-
+    <div class="container-footer2">
+        <div class="additional-links">
+            <div class="link-edicola">
+                <a href="#"><i class="fa-regular fa-newspaper" style="color: #ffffff;">  </i></a>
+                <a href="#"> Edicola Digitale </a>
+            </div>
+            <div class="link-shopping">
+                <a href="#"> <i class="fa-solid fa-bag-shopping" style="color: #ffffff;"></i></a>
+                <a href="#"> Libero Shopping </a>
+            </div>
+        </div>
+    </div>
+    <div class="container-footer3">
+        <div class="nav-footer">
+            <div class="nav-footer1">
+                <a href="#"> Cookie Policy</a>
+                <a href="#"> Contatti</a>
+            </div>
+            <div class="nav-footer2">
+                <a href="#"> Privacy Policy</a>
+                <a href="#"> Pubblicità</a>
+            </div>
+            <div class="nav-footer3">
+                <a href="#"> Condizioni Generali</a>
+                <a href="#"> Credits</a>
+            </div>
+        </div>
+    </div>
+    <div class="container-copyright">
+        <div class="copyright">
+            Editoriale Libero S.r.l. - Sede Legale: Viale Luigi Majno 42, 20129 Milano - Registro Imprese di Milano Monza Brianza Lodi: C.F. e P.IVA 06823221004 - R.E.A. Milano n. 1690166
+            Cap. Soc. € 400.000,00 i.v. - Tutti i diritti riservati - ISSN (sito web): 2531-6370
+        </div>
+        <div class="back-to-top">
+            <A href="#top" class="arrow-icon"><i class="fa-solid fa-arrow-up fa-sm" style="color: #ffffff;"></i></A>
+            <A href="#top"> TORNA SU </A>
+        </div>
+    </div>
 
 <script src="script.js"></script>
 
