--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <title>My website - Libero</title>
+    <link rel="icon" href="favicon.png" >
     </head>
 
 
@@ -1039,7 +1040,7 @@
                             <i class="fa-solid fa-share fa-sm" style="color: #1887E4; "></i>
                         </a>
                     </div>
-                    <img src="https://picsum.photos/311/174" alt=img" class="img-fluid" style="width: 100%">
+                    <img src="https://picsum.photos/311/175" alt=img" class="img-fluid" style="width: 100%">
                     <div class="aside-title">
                         <a href="#">
                             Aut nihil dolorem aut quasi alias rem quaerat
@@ -1059,7 +1060,7 @@
                     </a>
                 </div>
 
-                <img src="https://picsum.photos/311/178" alt=img" class="img-fluid" style="width: 100%">
+                <img src="https://picsum.photos/311/177" alt=img" class="img-fluid" style="width: 100%">
 
                 <div class="aside-title">
                     <a href="#">
