addition of a component

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
     </div>
 
     <div class="action-wrapper">
-        <a href="#" style="color: black"> <i class="fa-brands fa-facebook-f fa-xs" style="margin-right: 7px">  </i> </a>
-        <a href="#" style="color: black"> <i class="fa-brands fa-twitter fa-xs" style="margin-right: 7px">  </i> </a>
-        <a href="#" style="color: black"> <i class="fa-brands fa-instagram fa-xs" style="margin-right: 7px"></i> </a>
+        <a href="#" style="color: black"> <i class="fa-brands fa-facebook-f fa-xs" style="margin-right: 8px">  </i> </a>
+        <a href="#" style="color: black"> <i class="fa-brands fa-twitter fa-xs" style="margin-right: 8px">  </i> </a>
+        <a href="#" style="color: black"> <i class="fa-brands fa-instagram fa-xs" style="margin-right: 8px"></i> </a>
     </div>
 </div>
 
@@ -1028,6 +1028,167 @@
 
         </div>
 
+        <!-- Qui dentro solo stile libero -->
+        <div class="content-wrapper">
+            <div class="col-12 col-md-12 col-lg-8" style="background-color:rgb(43, 84, 126); ">
+                <div class="row" style="margin-bottom: 20px;">
+                    <div class="col-12 col-md-3 col-lg-3" id="colonna-title-md-lg" style="padding-right: 0">
+                        <!-- Titoli-->
+                        <div class="colonna-stile-libero" id="colonna">
+                            <div class="art_title first-title-orange" id="art_title1">
+                                Qui
+                            </div>
+                            <div class="art_title" id="art_title2">
+                                Dentro
+                            </div>
+                            <div class="art_title" id="art_title3">
+                                Solo
+                            </div>
+                            <div class="art_title" id="art_title4">
+                               Stile
+                            </div>
+                            <div class="art_title" id="art_title5" style="border: none;">
+                                Libero
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-9 col-lg-9" >
+                        <!-- Carosello automatico-->
+                        <div id="carouselSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+                            <div class="carousel-inner">
+                                <div class="carousel-item active" id="1">
+                                    <div class="hidden-title" >
+                                        <a href="#" > Qui </a>
+                                    </div>
+                                    <img class="d-block w-100" src="https://picsum.photos/509/267" alt="First slide">
+                                    <div class="carousel-title">
+                                        <a href="#">
+                                            Qui adipisci voluptatibus qui praesentium aliquam quo dolor rerum
+                                        </a>
+                                    </div>
+                                    <a href="#" style="float: right; margin-right: 15px;">
+                                        <i class="fa-solid fa-share fa-sm" style="color: #FF7E29; "></i>
+                                    </a>
+                                </div>
+                                <div class="carousel-item" id="2">
+                                    <div class="hidden-title" >
+                                        <a href="#" > Dentro </a>
+                                    </div>
+                                    <img class="d-block w-100" src="https://picsum.photos/509/268" alt="Second slide">
+                                    <div class="carousel-title">
+                                        <a href="#">
+                                            Est eaque galisum est distinctio quasi id totam nemo in rerum
+                                        </a>
+                                    </div>
+                                    <a href="#" style="float: right; margin-right: 15px;">
+                                        <i class="fa-solid fa-share fa-sm" style="color: #FF7E29; "></i>
+                                    </a>
+                                </div>
+                                <div class="carousel-item" id="3">
+                                    <div class="hidden-title" >
+                                        <a href="#" > Solo </a>
+                                    </div>
+                                    <img class="d-block w-100" src="https://picsum.photos/509/266" alt="Third slide">
+                                    <div class="carousel-title">
+                                        <a href="#">
+                                            Non quod iste et architecto ullam hic beatae veritatis sed fugit quod id
+                                        </a>
+                                    </div>
+                                    <a href="#" style="float: right; margin-right: 15px;">
+                                        <i class="fa-solid fa-share fa-sm" style="color: #FF7E29; "></i>
+                                    </a>
+                                </div>
+                                <div class="carousel-item" id="4">
+                                    <div class="hidden-title" >
+                                        <a href="#" > Stile </a>
+                                    </div>
+                                    <img class="d-block w-100" src="https://picsum.photos/508/266" alt="Fourth slide">
+                                    <div class="carousel-title">
+                                        <a href="#">
+                                            Ea reiciendis voluptatem et libero ipsam cum tenetur incidunt
+                                        </a>
+                                    </div>
+                                    <a href="#" style="float: right; margin-right: 15px;">
+                                        <i class="fa-solid fa-share fa-sm" style="color: #FF7E29; "></i>
+                                    </a>
+                                </div>
+                                <div class="carousel-item" id="5">
+                                    <div class="hidden-title" >
+                                        <a href="#" > Libero </a>
+                                    </div>
+                                    <img class="d-block w-100" src="https://picsum.photos/508/267" alt="Fifth slide">
+                                    <div class="carousel-title">
+                                        <a href="#">
+                                            Qui maxime eligendi id nesciunt delectus est provident amet vel nostrum commodi
+                                        </a>
+                                    </div>
+                                    <a href="#" style="float: right; margin-right: 15px;">
+                                        <i class="fa-solid fa-share fa-sm" style="color: #FF7E29; "></i>
+                                    </a>
+                                </div>
+                            </div>
+                            <br>
+                            <br>
+                            <button class="carousel-control-prev" id="next-soloLibero" type="button" data-bs-target="#carouselSlidesOnly" data-bs-slide="prev">
+                                <i class="fas fa-arrow-left fa-lg" style="color:#FF7E29" aria-hidden="true"></i>
+                                <span class="visually-hidden">Previous</span>
+                            </button>
+                            <button class="carousel-control-next" id="prev-soloLibero" type="button" data-bs-target="#carouselSlidesOnly" data-bs-slide="next">
+                                <i class="fas fa-arrow-right fa-lg" style="color:#FF7E29" aria-hidden="true"></i>
+                                <span class="visually-hidden">Next</span>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class= "row">
+                    <div class="col-12 col-md-6 col-lg-6" style="border-top: 8px solid white; border-right: 5px solid white;">  <!-- articolo-->
+                        <div class="carousel-article">
+                            <!--Overtitle-->
+                            <div class="carousel-article-title" >
+                                <a href="#" style="color:#FF7E29">
+                                    Lorem ipsum A
+                                </a>
+
+                            </div>
+
+                            <!--Title-->
+                            <div class="carousel-article-title" >
+                                <a href="#" >
+                                    Qui consequatur voluptas eum velit dolorum ea nobis dolorem
+                                </a>
+                            </div>
+                            <a href="#" style="float: right; margin-right: 15px;">
+                                <i class="fa-solid fa-share fa-sm" style="color: #FF7E29; "></i>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6" style="border-top: 8px solid white;">    <!-- articolo-->
+                        <div class="carousel-article">
+                            <!--Overtitle-->
+                            <div class="carousel-article-title" >
+                                <a href="#" style="color:#FF7E29">
+                                    Lorem ipsum B
+                                </a>
+                            </div>
+                            <!--Title-->
+                            <div class="carousel-article-title" >
+                                <a href="#">
+                                    Ex atque nihil ea molestiae provident est velit esse qui cumque temporibus
+                                </a>
+                            </div>
+                            <a href="#" style="float: right; margin-right: 15px;">
+                                <i class="fa-solid fa-share fa-sm" style="color: #FF7E29; "></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="col-12 col-md-12 col-lg-4">
+                <!-- colonna vuota per pubblicita-->
+            </div>
+        </div>
+
         <!--Altri articoli-->
         <div class="col-12 col-md-6 col-lg-6">
             <div class="aside-article">
@@ -1177,25 +1338,19 @@
                     </div>
                 </div>
             </div>
-
-
-
         </div>
         <div class="col-12 col-lg-4">  <!-- Aside: notizie a destra -->
-            <div>
 
-            </div>
         </div>
 
     </div>
-
 
 </div>
 
 
 
     <!--Footer-->
-    <div class="container-footer">
+<div class="container-footer">
         <div class="logo-footer" style="margin-left: 20px;"> <img src="logo.svg" alt="logo di Libero" ></div>
         <div class="nav-footer">
             <div class="nav-footer1">
@@ -1232,7 +1387,7 @@
             <a href="#" style="color:white"> <i class="fa-brands fa-instagram" style="margin-right: 15px"></i> </a>
         </div>
     </div>
-    <div class="container-footer2">
+<div class="container-footer2">
         <div class="additional-links">
             <div class="link-edicola">
                 <a href="#"><i class="fa-regular fa-newspaper" style="color: #ffffff;">  </i></a>
@@ -1244,7 +1399,7 @@
             </div>
         </div>
     </div>
-    <div class="container-footer3">
+<div class="container-footer3">
         <div class="nav-footer">
             <div class="nav-footer1">
                 <a href="#"> Cookie Policy</a>
@@ -1260,7 +1415,7 @@
             </div>
         </div>
     </div>
-    <div class="container-copyright">
+<div class="container-copyright">
         <div class="copyright">
             Editoriale Libero S.r.l. - Sede Legale: Viale Luigi Majno 42, 20129 Milano - Registro Imprese di Milano Monza Brianza Lodi: C.F. e P.IVA 06823221004 - R.E.A. Milano n. 1690166
             Cap. Soc. € 400.000,00 i.v. - Tutti i diritti riservati - ISSN (sito web): 2531-6370
