--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <link rel="stylesheet" type="text/css" href="style.css">
 
-    <title>My website - Libero</title>
+    <title>PPM Unifi</title>
     <link rel="icon" href="favicon.png" >
     </head>
 
